--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -674,7 +674,7 @@ dialog {
 }
 
 .btn-volver-pedidos:hover {
-    background-color: #787878; 
+    background-color: #787878;
 }
 
 .btn-volver-pedidos:focus {
@@ -694,10 +694,6 @@ dialog {
     border-bottom: 0.0625rem solid #d1d5db;
     padding: 0.75rem;
     text-align: left;
-}
-
-.pedidos-table th {
-    background-color: #f3f4f6;
 }
 
 .pedidos-table .action-cell {
@@ -720,8 +716,8 @@ dialog {
     text-align: center;
     transition: background-color 0.3s, transform 0.2s;
     width: 100%;
-    max-width: 50rem; 
-    margin: 0 auto; 
+    max-width: 50rem;
+    margin: 0 auto;
 }
 
 .btn-crear-pedido:hover {
@@ -831,19 +827,6 @@ dialog {
     outline-offset: 2px;
 }
 
-.mb-4 {
-    display: block;
-    margin-bottom: 1.5rem;
-}
-
-.button-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 50rem; 
-    margin: 0 auto 1.5rem;
-}
-
 .user-suggestions {
     position: absolute;
     background: #fff;
@@ -872,6 +855,23 @@ dialog {
 
 .suggestion-item:hover {
     background: #f2f2f2;
+}
+
+.table-header {
+    background-color: #f3f4f6;
+}
+
+.table-cell {
+    border: 0.0625rem solid #d1d5db;
+    padding: 0.75rem;
+    text-align: left;
+}
+
+.dialog-message {
+    text-align: center;
+    margin: 1rem 0;
+    font-size: 1rem;
+    color: #333;
 }
 
 /* Usuarios */
